--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,15 +10,32 @@
 $cyan: #33e0ff;
 $humility: #777;
 
-// Bootstrap Variables
-$brand-primary: darken(#428bca, 6.5%);
-$brand-secondary: #e25139;
-$brand-success: #5cb85c;
-$brand-warning: #f0ad4e;
-$brand-danger: #d9534f;
-$brand-info: #5bc0de;
 
+
+
+// Bootstrap Variables
 $text-color: #333;
 
-$font-size-base: 14px;
-$font-family-sans-serif: "Helvetica Neue", Helvetica, sans-serif;
+$font-size-base: 18px;
+$font-family-sans-serif: "Open Sans", sans-serif;
+
+
+
+
+// App variables
+
+// -- Font weights
+$font-weight-thin: 100;
+$font-weight-light: 300;
+$font-weight-regular: 400;
+$font-weight-medium: 400;
+$font-weight-bold: 700;
+$font-weight-black: 900;
+
+// -- Colors
+$color-main: #228fcb;
+
+// -- Header
+$header-height: 70px;
+$header-logo-height: 40px;
+$header-brand-height: 22px;
