--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,3 +39,11 @@ $color-main: #228fcb;
 $header-height: 70px;
 $header-logo-height: 40px;
 $header-brand-height: 22px;
+
+// -- Hr
+$hr-size-nm: 0;
+$hr-size-xs: 5px;
+$hr-size-sm: 10px;
+$hr-size-md: 20px;
+$hr-size-lg: 40px;
+$hr-size-xl: 60px;
