--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -16,8 +16,8 @@ $humility: #777;
 // Bootstrap Variables
 $text-color: #333;
 
-$font-size-base: 18px;
-$font-family-sans-serif: "Open Sans", sans-serif;
+$font-size-base: 16px;
+$font-family-sans-serif: "Lato", sans-serif;
 
 
 
