--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -2,3 +2,36 @@
  * Override Bootstrap styles that you can't modify via variables here.
  *
  */
+
+@import './variables';
+
+html {
+  font-size: $font-size-base;
+}
+
+a {
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+button {
+  background: none;
+  border: none;
+  padding: 0;
+  outline: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  display: inline;
+  margin: 0;
+  padding: 0;
+  font-size: 1rem;
+  font-weight: normal;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
