--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -5,27 +5,13 @@
   position: fixed;
   top: 0;
   right: 0;
-  bottom: 0;
   left: 0;
+  height: $header-height;
   z-index: 1000;
   visibility: hidden;
-  display: flex;
-  flex-direction: column;
   transition: visibility 0s;
   transition-delay: .5s;
 }
-
-  .bg {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    background: rgba(black, .7);
-    transition: opacity .2s;
-    z-index: -1;
-  }
 
   .topbar {
     position: relative;
@@ -66,19 +52,18 @@
 
   .content {
     position: relative;
-    flex-grow: 1;
+    height: calc(100vh - #{$header-height});
     visibility: hidden;
     background: $color-main;
     opacity: 0;
-    transform: translateY(-50px);
-    transition: visibility 0s, transform .2s, opacity .2s;
+    transition: visibility 0s linear .2s, opacity .2s;
   }
 
   .contentOpened {
     composes: content;
     visibility: visible;
     opacity: 1;
-    transform: translateY(0);
+    transition-delay: 0s;
   }
 
   .opened {
@@ -89,10 +74,5 @@
       transform: translateY(0);
       transition: transform .2s;
       transition-delay: .2s;
-    }
-
-    .bg {
-      opacity: 1;
-      transition: opacity .2s;
     }
   }
