--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -54,3 +54,8 @@ $hr-size-xl: 60px;
 
 // -- Overlay
 $overlay-zindex: 1000;
+
+// -- PopButton
+$pop-button-zindex: 1200;
+$pop-button-size: 60px;
+$pop-button-margin: 15px;
