--- a/src/components/Picker/PickerPanel.scss
+++ b/src/components/Picker/PickerPanel.scss
@@ -4,9 +4,9 @@
 $background: lighten($border-color, 5%);
 
 .panel {
-  border: $border-color solid 1px;
-  border-radius: 3px;
-  box-shadow: 1px 1px 2px $border-color;
+  border: 1px solid;
+  border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+  background: white;
 }
 
 .title {
