--- a/src/containers/Post/Post.scss
+++ b/src/containers/Post/Post.scss
@@ -9,8 +9,9 @@
   padding: 50px;
   margin-top: -400px;
   min-height: 1000px;
-  box-shadow: 0 -1px 5px rgba(black, .3);
   z-index: 100;
+  border: 1px solid;
+  border-color: #e5e6e9 #dfe0e4 #d0d1d5;
 }
 
 .text {
