--- a/src/components/Picker/LabelPicker.scss
+++ b/src/components/Picker/LabelPicker.scss
@@ -12,3 +12,22 @@ $background: lighten(black, 98%);
     background: $background;
   }
 }
+
+.more {
+  composes: label;
+  text-align: center;
+}
+
+.readOnly {
+  position: relative;
+
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(white, .7);
+  }
+}
