--- a/src/components/Picker/GridPicker.scss
+++ b/src/components/Picker/GridPicker.scss
@@ -21,6 +21,20 @@
   }
 }
 
+.readOnly {
+  position: relative;
+
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(white, .7);
+  }
+}
+
 .active {
   .label {
     color: white;
