--- a/src/components/SearchButton/SearchButton.scss
+++ b/src/components/SearchButton/SearchButton.scss
@@ -2,16 +2,7 @@
 @import "../../theme/variables.scss";
 
 .button {
-  width: $header-height;
-  height: $header-height;
-  background: #EEE;
-  line-height: $header-height;
   text-align: center;
-  font-size: 1.2rem;
-  color: #AAA;
+  color: #FFF;
   cursor: pointer;
-
-  &:hover {
-    color: $color-main;
-  }
 }
