--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -2,78 +2,44 @@
 @import "../../theme/variables.scss";
 
 .sidebar {
-  background: $color-main;
+  background: #124765;
   color: white;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
-  width: $header-height;
-  height: $header-height - 1;
-  transition: height .15s, width .15s .1s;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity .15s, visibility 0s .15s;
   transition-timing-function: ease-in-out;
   overflow: hidden;
   z-index: $sidebar-zindex;
+  display: flex;
+
+  &.opened {
+    transition: visibility 0s, opacity .15s;
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
   .content {
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity .3s;
-    padding: 20px 50px;
-  }
-
-  .burger {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: $header-height;
-    height: $header-height;
-    margin-left: auto;
+    text-align: center;
+    margin: $header-height auto;
   }
 
   .link {
     display: block;
     color: white;
-    font-weight: $font-weight-bold;
+    font-weight: $font-weight-regular;
     text-decoration: none;
-    text-align: right;
-    font-size: 35px;
+    font-size: 20px;
     text-transform: uppercase;
     margin-bottom: 10px;
     transition: transform .2s;
-    transform-origin: right;
 
     &:hover {
       transform: scale(1.05);
-    }
-  }
-
-  .opened {
-    bottom: 0;
-    width: 550px;
-    height: 100vh;
-    transition: width .3s, height .3s .3s;
-    z-index: $sidebar-zindex + $overlay-zindex;
-
-    .content {
-      opacity: 1;
-      visibility: visible;
-      transition: opacity .3s .6s;
-    }
-  }
-
-  @media (max-width: 767px) {
-    .opened {
-      width: 100%;
-    }
-  }
-
-  @media (max-width: 500px) {
-    .content {
-      padding: 20px 20px 20px 0;
-    }
-
-    .link {
-      font-size: 26px;
     }
   }
