--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -59,3 +59,8 @@ $overlay-zindex: 100;
 $pop-button-zindex: 1200;
 $pop-button-size: 60px;
 $pop-button-margin: 15px;
+
+// -- Posts feed
+$post-feed-margin: 36px;
+$post-feed-picture-width: 170px;
+$post-feed-picture-height: 130px;
