--- a/src/components/PostsFeed/BlankItemsFeed.scss
+++ b/src/components/PostsFeed/BlankItemsFeed.scss
@@ -1,10 +1,29 @@
+
+@import "../../theme/variables.scss";
+@import "../../theme/mixins.scss";
+
 .items {}
 
 .item {
-  background: white;
-  border: 1px solid;
-  border-color: #e5e6e9 #dfe0e4 #d0d1d5;
-  margin-bottom: 35px;
+  @include clearfix();
+  margin-bottom: $post-feed-margin / 2;
+
+  &:after {
+    content: "";
+    width: 120px;
+    padding-top: ($post-feed-margin / 2) + 3;
+    display: block;
+    margin: 0 auto;
+    background-image: linear-gradient(to right, #CCC 33%, rgba(255,255,255,0) 0%);
+    background-position: -10px bottom;
+    background-size: 10px 3px;
+    background-repeat: repeat-x;
+  }
+
+  &:last-child:after {
+    display: none;
+    margin-bottom: 0;
+  }
 }
 
 .animatedBackground {
@@ -24,11 +43,14 @@
 }
 
 .picture {
-  height: 240px;
+  float: left;
+  width: $post-feed-picture-width;
+  height: $post-feed-picture-height;
 }
 
 .content {
-  padding: 18px;
+  margin-left: $post-feed-picture-width + 30px;
+  padding-top: 5px;
 }
 
 .line {
