--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -1,60 +1,20 @@
 @import "../../theme/variables.scss";
 
-.home {
-  dd {
-    margin-bottom: 15px;
-  }
-}
-.masthead {
-  background: #2d2d2d;
-  padding: 40px 20px;
+.welcome {
   color: white;
+  min-height: 95vh;
   text-align: center;
-  .logo {
-    $size: 200px;
-    margin: auto;
-    height: $size;
-    width: $size;
-    border-radius: $size / 2;
-    border: 1px solid $cyan;
-    box-shadow: inset 0 0 10px $cyan;
-    vertical-align: middle;
-    p {
-      line-height: $size;
-      margin: 0px;
-    }
-    img {
-      width: 75%;
-      margin: auto;
-    }
-  }
-  h1 {
-    color: $cyan;
-    font-size: 4em;
-  }
-  h2 {
-    color: #ddd;
-    font-size: 2em;
-    margin: 20px;
-  }
-  a {
-    color: #ddd;
-  }
-  p {
-    margin: 10px;
-  }
-  .humility {
-    color: $humility;
-    a {
-      color: $humility;
-    }
-  }
-  .github {
-    font-size: 1.5em;
-  }
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.counterContainer {
-  text-align: center;
-  margin: 20px;
+.welcomeHeadline {
+  font-size: 80px;
+  font-weight: $font-weight-thin;
+}
+
+.welcomeContentline {
+  font-size: 30px;
+  font-weight: $font-weight-light;
 }
