--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -36,10 +36,14 @@ $font-weight-black: 900;
 $color-main: #228fcb;
 
 // -- Header
-$header-height: 90px;
+$header-height: 100px;
 $header-zindex: 100;
-$header-logo-height: 50px;
-$header-brand-height: 32px;
+$header-logo-height: 58px;
+$header-brand-height: 36px;
+$header-sticky-height: $header-height * 0.6;
+$header-sticky-logo-scale: 0.8;
+$header-sticky-brand-scale: 0.8;
+$header-sticky-brand-translate: -5%;
 
 // -- Sidebar
 $sidebar-zindex: 200;
