--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,7 +16,7 @@
     }
 
     .logo {
-      transform: scale($header-sticky-logo-scale);
+      transform: scale($header-sticky-logo-scale) rotate(180deg);
     }
 
     .brand {
@@ -37,7 +37,6 @@
     height: $header-logo-height;
     margin-right: 20px;
     transition: transform .3s;
-    transform-origin: left center;
   }
 
   .brand {
