--- a/src/components/Hr/Hr.scss
+++ b/src/components/Hr/Hr.scss
@@ -4,7 +4,8 @@
 
 @mixin hr-size($name, $size) {
   .#{$name} {
-    margin: ($size / 2) 0;
+    margin-top: ($size / 2);
+    margin-bottom: ($size / 2);
   }
 
   .inline {
@@ -22,7 +23,16 @@
 }
 
   .line {
-    border-bottom: solid 1px;
+    display: block;
+    height: 3px;
+    width: 40%;
+    min-width: 140px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: linear-gradient(to right, #CCC 33%, rgba(255,255,255,0) 0%);
+    background-position: -10px bottom;
+    background-size: 10px 3px;
+    background-repeat: repeat-x;
   }
 
   .inline {
