Improve buttons, jumbotrons and other

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -56,6 +56,15 @@ $hr-size-md: 20px;
 $hr-size-lg: 40px;
 $hr-size-xl: 60px;
 
+// -- Button
+$button-size-xxs: 10px;
+$button-size-xs: 12px;
+$button-size-sm: 14px;
+$button-size-md: 16px;
+$button-size-lg: 20px;
+$button-size-xl: 26px;
+$button-size-xxl: 32px;
+
 // -- Overlay
 $overlay-zindex: 100;
 
