--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,25 +1,46 @@
 
 @import "../../theme/variables.scss";
 
+@mixin button-size($name, $size) {
+  .#{$name} {
+    font-size: $size;
+    padding: ($size * 0.75) ($size * 0.9);
+
+    &.rounded {
+      border-radius: $size / 3;
+    }
+  }
+}
+
 .button {
+  color: #222;
   background: transparent;
   border: solid 1px;
   cursor: pointer;
   transition: background .3s;
+  font-weight: $font-weight-light;
 
   &:hover {
     background: #222;
     border-color: #222;
     color: white;
   }
+
+  &.negative {
+    color: white;
+
+    &:hover {
+      background: white;
+      border-color: white;
+      color: #222;
+    }
+  }
 }
 
-  .md {
-    font-size: 16px;
-    padding: 10px 15px;
-  }
-
-  .lg {
-    font-size: 20px;
-    padding: 15px 20px;
-  }
+@include button-size('xxs', $button-size-xxs);
+@include button-size('xs', $button-size-xs);
+@include button-size('sm', $button-size-sm);
+@include button-size('md', $button-size-md);
+@include button-size('lg', $button-size-lg);
+@include button-size('xl', $button-size-xl);
+@include button-size('xxl', $button-size-xxl);
