--- a/src/containers/Post/Post.scss
+++ b/src/containers/Post/Post.scss
@@ -7,7 +7,8 @@
   position: relative;
   background: white;
   padding: 50px;
-  margin-top: -400px;
+  margin-top: -100px;
+  margin-bottom: 50px;
   min-height: 1000px;
   z-index: 100;
   border: 1px solid;
