--- a/src/components/PostsFeed/PostsFeed.scss
+++ b/src/components/PostsFeed/PostsFeed.scss
@@ -20,9 +20,15 @@
     background-repeat: repeat-x;
   }
 
-  &:last-child:after {
-    display: none;
+  &:last-child {
     margin-bottom: 0;
+
+    &:after {
+      visibility: hidden;
+      height: 0;
+      margin: 0;
+      padding: 0;
+    }
   }
 }
 
