--- a/src/components/Jumbotron/Jumbotron.scss
+++ b/src/components/Jumbotron/Jumbotron.scss
@@ -31,6 +31,7 @@
   justify-content: center;
   padding-top: $header-sticky-height;
   position: relative;
+  background: rgba(black, .2);
 }
 
 .title {
