--- a/src/containers/Post/Post.scss
+++ b/src/containers/Post/Post.scss
@@ -1,19 +1,24 @@
-
 .content {
   min-height: 500px;
 }
 
-.avatar {
-  display: inline-block;
-  width: 70px;
-}
-
-.text {
-  p {
-    margin-bottom: 20px;
-  }
-}
-
 .comments {
   max-width: 700px;
+  // margin: 0 auto;
+}
+
+.metabar {
+  padding: 35px 0 15px;
+  font-size: 18px;
+  color: #ccc;
+}
+
+.postAuthor {
+  color: #aaa;
+  text-transform: uppercase;
+  font-size: 1.2em;
+}
+
+.postDate {
+  font-size: 0.8em;
 }
