--- a/src/theme/mixins.scss
+++ b/src/theme/mixins.scss
@@ -1,1 +1,1 @@
-@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/_mixins';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/_mixins';
