--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -70,4 +70,4 @@ $post-feed-margin: 36px;
 $post-feed-picture-width: 170px;
 $post-feed-picture-height: 130px;
 
-@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/_variables';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/_variables';
