--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,12 +1,17 @@
-
 @import "../../theme/variables.scss";
 
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
-  padding: 70px;
+  height: $footer-height;
   background: #1f1f1f;
-  margin-top: 100px;
   text-align: center;
   font-weight: $font-weight-thin;
   font-size: 1.1rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
