--- a/src/theme/base.scss
+++ b/src/theme/base.scss
@@ -1,12 +1,15 @@
 @import './variables';
 
-
 html {
   font-size: $font-size-base;
+  height: 100%;
 }
 
 body {
   background: #fcfcfc;
+  padding-bottom: $footer-height;
+  min-height: 100%;
+  position: relative;
 }
 
 a {
@@ -25,7 +28,12 @@ button {
   outline: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   display: inline;
   margin: 0;
   padding: 0;
