--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,17 +2,11 @@
 $cyan: #33e0ff;
 $humility: #777;
 
-
-
-
 // Bootstrap Variables
 $text-color: #333;
 
 $font-size-base: 16px;
 $font-family-sans-serif: "Lato", sans-serif;
-
-
-
 
 // App variables
 
@@ -36,6 +30,9 @@ $header-sticky-height: $header-height * 0.6;
 $header-sticky-logo-scale: 0.8;
 $header-sticky-brand-scale: 0.8;
 $header-sticky-brand-translate: -5%;
+
+// -- Sidebar
+$footer-height: 70px;
 
 // -- Sidebar
 $sidebar-zindex: 200;
