Church pages scaffold

--- a/src/theme/base.scss
+++ b/src/theme/base.scss
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  background: #fcfcfc;
+  background: $app-background;
   padding-bottom: $footer-height;
   min-height: 100%;
   position: relative;
