--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,6 +10,9 @@ $font-family-sans-serif: "Lato", sans-serif;
 
 // App variables
 
+// -- App
+$app-background: #fcfcfc;
+
 // -- Font weights
 $font-weight-thin: 100;
 $font-weight-light: 300;
