--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,12 +9,12 @@
 
   &.mini {
     .logo {
-      transform: scale($header-sticky-logo-scale);
+      transform: scale($header-sticky-logo-scale) translateX(-10px);
     }
 
     .brand {
       transform: scale($header-sticky-brand-scale)
-        translateX($header-sticky-brand-translate);
+        translateX($header-sticky-brand-translate - 2);
     }
   }
 
@@ -36,19 +36,19 @@
   align-items: center;
   height: $header-height;
   padding: 0 30px;
-  transition: height 0.3s;
+  transition: height .3s;
 }
 
 .logo {
   height: $header-logo-height;
   margin-right: 20px;
-  transition: transform 0.5s;
+  transition: transform .5s;
 }
 
 .brand {
   height: $header-brand-height;
   margin-right: 20px;
-  transition: transform 0.3s;
+  transition: transform .3s;
   transform-origin: left center;
 }
 
