--- a/src/components/Burger/Burger.scss
+++ b/src/components/Burger/Burger.scss
@@ -1,4 +1,3 @@
-
 .burger {
   border: 0;
   padding: 0;
@@ -7,23 +6,23 @@
   outline: 0;
 }
 
-  .line {
-    transition-timing-function: ease-out;
-    transition-duration: .2s;
-  }
+.line {
+  transition-timing-function: ease-out;
+  transition-duration: 0.2s;
+}
 
-  .last {
-    margin-bottom: 0;
-  }
+.last {
+  margin-bottom: 0;
+}
 
-  .out {
-    transition-property: transform;
-  }
+.out {
+  transition-property: transform;
+}
 
-  .in {
-    transition-property: opacity;
-  }
+.in {
+  transition-property: opacity;
+}
 
-  .rounded {
-    border-radius: 5px;
-  }
+.rounded {
+  border-radius: 5px;
+}
