--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -1,4 +1,3 @@
-
 @import "../../theme/mixins.scss";
 
 .container {
@@ -10,8 +9,18 @@
   max-width: 1200px;
 }
 
-  .xs { max-width: 500px }
-  .sm { max-width: 700px }
-  .md { max-width: 900px }
-  .lg { max-width: 1100px }
-  .xl { max-width: 1300px }
+.xs {
+  max-width: 500px;
+}
+.sm {
+  max-width: 700px;
+}
+.md {
+  max-width: 900px;
+}
+.lg {
+  max-width: 1100px;
+}
+.xl {
+  max-width: 1300px;
+}
