--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,3 @@
-
 @import "../../theme/variables.scss";
 
 .header {
@@ -6,7 +5,7 @@
   top: 0;
   z-index: $header-zindex;
   width: 100%;
-  transition: background .3s;
+  transition: background 0.3s;
 
   &.mini {
     .logo {
@@ -14,7 +13,8 @@
     }
 
     .brand {
-      transform: scale($header-sticky-brand-scale) translateX($header-sticky-brand-translate);
+      transform: scale($header-sticky-brand-scale)
+        translateX($header-sticky-brand-translate);
     }
   }
 
@@ -31,67 +31,67 @@
   }
 }
 
-  .body {
-    display: flex;
-    align-items: center;
-    height: $header-height;
-    padding: 0 30px;
-    transition: height .3s;
+.body {
+  display: flex;
+  align-items: center;
+  height: $header-height;
+  padding: 0 30px;
+  transition: height 0.3s;
+}
+
+.logo {
+  height: $header-logo-height;
+  margin-right: 20px;
+  transition: transform 0.5s;
+}
+
+.brand {
+  height: $header-brand-height;
+  margin-right: 20px;
+  transition: transform 0.3s;
+  transform-origin: left center;
+}
+
+.burger {
+  position: relative;
+  margin-left: 35px;
+  z-index: $sidebar-zindex + 1;
+}
+
+.search {
+  display: none;
+  margin-left: 20px;
+}
+
+.blankItem {
+  margin-left: auto;
+}
+
+.links {
+  display: flex;
+  flex-grow: 0;
+}
+
+.linksItem {
+  flex-grow: 0;
+  text-align: right;
+  margin-left: 20px;
+}
+
+.link {
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: $font-weight-light;
+  font-size: 16px;
+
+  &:hover {
+    text-decoration: underline;
   }
 
-  .logo {
-    height: $header-logo-height;
-    margin-right: 20px;
-    transition: transform .5s;
-  }
-
-  .brand {
-    height: $header-brand-height;
-    margin-right: 20px;
-    transition: transform .3s;
-    transform-origin: left center;
-  }
-
-  .burger {
-    position: relative;
-    margin-left: 35px;
-    z-index: $sidebar-zindex + 1;
-  }
-
-  .search {
-    display: none;
-    margin-left: 20px;
-  }
-
-  .blankItem {
-    margin-left: auto;
-  }
-
-  .links {
-    display: flex;
-    flex-grow: 0;
-  }
-
-  .linksItem {
-    flex-grow: 0;
-    text-align: right;
-    margin-left: 20px;
-  }
-
-  .link {
+  &:focus,
+  &:visited {
     color: white;
     text-decoration: none;
-    text-transform: uppercase;
-    font-weight: $font-weight-light;
-    font-size: 16px;
-
-    &:hover {
-      text-decoration: underline;
-    }
-
-    &:focus,
-    &:visited {
-      color: white;
-      text-decoration: none;
-    }
   }
+}
