--- a/src/components/Jumbotron/Jumbotron.scss
+++ b/src/components/Jumbotron/Jumbotron.scss
@@ -1,4 +1,3 @@
-
 @import "../../theme/variables.scss";
 
 .jumbotron {
@@ -19,7 +18,7 @@
       width: 100%;
       top: 0;
       left: 0;
-      background: rgba(black, .2);
+      background: rgba(black, 0.2);
     }
   }
 }
@@ -31,7 +30,7 @@
   justify-content: center;
   padding-top: $header-sticky-height;
   position: relative;
-  background: rgba(black, .2);
+  background: rgba(black, 0.2);
 }
 
 .title {
