--- a/src/components/Overlay/Overlay.scss
+++ b/src/components/Overlay/Overlay.scss
@@ -1,8 +1,7 @@
-
 @import "../../theme/variables.scss";
 
 .overlay {
-  background: rgba(black, .7);
+  background: rgba(black, 0.7);
   position: fixed;
   top: 0;
   left: 0;
@@ -12,11 +11,11 @@
   opacity: 0;
   cursor: pointer;
   visibility: hidden;
-  transition: visibility 0s linear .2s, opacity .2s linear;
+  transition: visibility 0s linear 0.2s, opacity 0.2s linear;
 }
 
-  .active {
-    visibility: visible;
-    opacity: 1;
-    transition-delay: 0s;
-  }
+.active {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
+}
