--- a/src/components/Picker/GridPicker.scss
+++ b/src/components/Picker/GridPicker.scss
@@ -1,5 +1,4 @@
-
-@import './variables';
+@import "./variables";
 
 .grid {
   display: flex;
@@ -31,7 +30,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(white, .7);
+    background: rgba(white, 0.7);
   }
 }
 
