--- a/src/components/Picker/TabPicker.scss
+++ b/src/components/Picker/TabPicker.scss
@@ -1,5 +1,4 @@
-
-@import './variables';
+@import "./variables";
 
 .tabs {
   border-bottom: $border-color solid 1px;
@@ -22,13 +21,13 @@
 }
 
 .tabDisabled {
-  opacity: .3;
+  opacity: 0.3;
   cursor: default;
 }
 
 .tabActiveBar {
   height: 3px;
   background: red;
-  transition: transform .3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
   margin-top: -3px;
 }
