--- a/src/components/PopButton/PopButton.scss
+++ b/src/components/PopButton/PopButton.scss
@@ -1,4 +1,3 @@
-
 @import "../../theme/variables.scss";
 
 .container {
@@ -10,7 +9,7 @@
   right: $pop-button-margin;
   border-radius: $pop-button-size / 2;
   box-shadow: 0 0 7px rgba(black, 0.7);
-  transition: all .2s;
+  transition: all 0.2s;
   z-index: $pop-button-zindex;
   overflow: auto;
 }
@@ -19,7 +18,7 @@
   padding: $pop-button-margin;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s linear .3s, opacity .2s
+  transition: visibility 0s linear 0.3s, opacity 0.2s;
 }
 
 .opened {
