--- a/src/components/PostsFeed/PostsFeed.scss
+++ b/src/components/PostsFeed/PostsFeed.scss
@@ -1,8 +1,8 @@
-
 @import "../../theme/variables.scss";
 @import "../../theme/mixins.scss";
 
-.posts {}
+.posts {
+}
 
 .post {
   @include clearfix();
@@ -14,7 +14,11 @@
     padding-top: ($post-feed-margin / 2) + 3;
     display: block;
     margin: 0 auto;
-    background-image: linear-gradient(to right, #CCC 33%, rgba(255,255,255,0) 0%);
+    background-image: linear-gradient(
+      to right,
+      #ccc 33%,
+      rgba(255, 255, 255, 0) 0%
+    );
     background-position: -10px bottom;
     background-size: 10px 3px;
     background-repeat: repeat-x;
@@ -60,7 +64,7 @@
   vertical-align: middle;
   width: 36px;
   margin-right: 12px;
-  border: solid 1px #EEE;
+  border: solid 1px #eee;
 }
 
 .taxonomies {
@@ -73,7 +77,7 @@
 }
 
 .taxonomy {
-  color: #CCC;
+  color: #ccc;
   margin-right: 12px;
 }
 
