--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,4 +1,3 @@
-
 @import "../../theme/variables.scss";
 
 .search {
@@ -10,69 +9,69 @@
   z-index: 1000;
   visibility: hidden;
   transition: visibility 0s;
-  transition-delay: .5s;
+  transition-delay: 0.5s;
 }
 
+.topbar {
+  position: relative;
+  background: $color-main;
+  height: $header-height;
+  transition: transform 0.2s;
+  transition-delay: 0.2s;
+  transform: translateY(-100%);
+  z-index: 1;
+  display: flex;
+}
+
+.input {
+  height: $header-height;
+  padding: $header-height / 2;
+  padding-right: 0;
+  width: 100%;
+  border: 0;
+  background: 0;
+  color: white;
+  font-size: 25px;
+  font-weight: $font-weight-light;
+  outline: 0;
+
+  &::placeholder {
+    color: rgba(white, 0.5);
+  }
+}
+
+.closeBtn {
+  line-height: $header-height;
+  width: $header-height;
+  font-size: $header-height / 2;
+  text-align: center;
+  color: white;
+  cursor: pointer;
+}
+
+.content {
+  position: relative;
+  height: calc(100vh - #{$header-height});
+  visibility: hidden;
+  background: $color-main;
+  opacity: 0;
+  transition: visibility 0s linear 0.2s, opacity 0.2s;
+}
+
+.contentOpened {
+  composes: content;
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
+}
+
+.opened {
+  visibility: visible;
+  transition-delay: 0s;
+
   .topbar {
-    position: relative;
-    background: $color-main;
-    height: $header-height;
-    transition: transform .2s;
-    transition-delay: .2s;
-    transform: translateY(-100%);
-    z-index: 1;
-    display: flex;
+    transform: translateY(0);
+    transition: transform 0.2s;
+    transition-delay: 0.2s;
   }
-
-  .input {
-    height: $header-height;
-    padding: $header-height / 2;
-    padding-right: 0;
-    width: 100%;
-    border: 0;
-    background: 0;
-    color: white;
-    font-size: 25px;
-    font-weight: $font-weight-light;
-    outline: 0;
-
-    &::placeholder {
-      color: rgba(white, .5);
-    }
-  }
-
-  .closeBtn {
-    line-height: $header-height;
-    width: $header-height;
-    font-size: $header-height / 2;
-    text-align: center;
-    color: white;
-    cursor: pointer;
-  }
-
-  .content {
-    position: relative;
-    height: calc(100vh - #{$header-height});
-    visibility: hidden;
-    background: $color-main;
-    opacity: 0;
-    transition: visibility 0s linear .2s, opacity .2s;
-  }
-
-  .contentOpened {
-    composes: content;
-    visibility: visible;
-    opacity: 1;
-    transition-delay: 0s;
-  }
-
-  .opened {
-    visibility: visible;
-    transition-delay: 0s;
-
-    .topbar {
-      transform: translateY(0);
-      transition: transform .2s;
-      transition-delay: .2s;
-    }
-  }
+}
