--- a/src/theme/bootstrap.scss
+++ b/src/theme/bootstrap.scss
@@ -1,9 +1,9 @@
-@import './mixins';
-@import './variables';
+@import "./mixins";
+@import "./variables";
 
-@import '~bootstrap-sass/assets/stylesheets/bootstrap/normalize';
-@import '~bootstrap-sass/assets/stylesheets/bootstrap/scaffolding';
-@import '~bootstrap-sass/assets/stylesheets/bootstrap/grid';
-@import '~bootstrap-sass/assets/stylesheets/bootstrap/forms';
-@import '~bootstrap-sass/assets/stylesheets/bootstrap/buttons';
-@import '~bootstrap-sass/assets/stylesheets/bootstrap/utilities';
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/normalize";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/grid";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/forms";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/buttons";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/utilities";
