--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,13 +8,9 @@
   transition: background 0.3s;
 
   &.mini {
-    .logo {
-      transform: scale($header-sticky-logo-scale) translateX(-10px);
-    }
-
     .brand {
       transform: scale($header-sticky-brand-scale)
-        translateX($header-sticky-brand-translate - 2);
+        translateX($header-sticky-brand-translate);
     }
   }
 
@@ -25,8 +21,13 @@
       height: $header-sticky-height;
     }
 
+    .brand {
+      transform: scale($header-sticky-brand-scale)
+        translateX($header-sticky-brand-translate);
+    }
+
     .logo {
-      transform: scale($header-sticky-logo-scale) rotate(180deg);
+      transform: rotate(180deg);
     }
   }
 }
@@ -39,17 +40,45 @@
   transition: height .3s;
 }
 
-.logo {
-  height: $header-logo-height;
-  margin-right: 20px;
-  transition: transform .5s;
-}
-
 .brand {
-  height: $header-brand-height;
-  margin-right: 20px;
   transition: transform .3s;
   transform-origin: left center;
+  position: relative;
+}
+
+.logo {
+  position: relative;
+  display: inline-block;
+  margin-right: 20px;
+  transition: transform .5s;
+
+  &,
+  & > img {
+    height: $header-logo-height;
+  }
+}
+
+.betaMark {
+  display: block;
+  background: #e83c3c;
+  border-radius: 3px;
+  display: block;
+  color: white;
+  padding: 2px 4px;
+  position: absolute;
+  left: $header-logo-height - 16;
+  top: 0;
+  font-size: 9px;
+  line-height: 1em;
+  width: 30px;
+  text-align: center;
+  cursor: default;
+  text-transform: uppercase;
+}
+
+.title {
+  height: $header-brand-height;
+  margin-right: 20px;
 }
 
 .burger {
