Rework post page

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -15,6 +15,7 @@
   color: #222;
   background: transparent;
   border: solid 1px;
+  border-radius: 0;
   cursor: pointer;
   transition: background 0.3s;
   font-weight: $font-weight-light;
