--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -6,6 +6,7 @@ $humility: #777;
 $text-color: #333;
 
 $font-size-base: 16px;
+$font-weight-base: 300;
 $font-family-sans-serif: "Lato", sans-serif;
 
 // App variables
