--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -8,7 +8,7 @@
   height: $footer-height;
   background: #1f1f1f;
   text-align: center;
-  font-weight: $font-weight-thin;
+  font-weight: $font-weight-light;
   font-size: 1.1rem;
   position: absolute;
   bottom: 0;
