--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -69,6 +69,7 @@
   left: $header-logo-height - 16;
   top: 0;
   font-size: 9px;
+  font-weight: 400;
   line-height: 1em;
   width: 30px;
   text-align: center;
@@ -113,6 +114,7 @@
   text-transform: uppercase;
   font-weight: $font-weight-light;
   font-size: 16px;
+  font-weight: 400;
 
   &:hover {
     text-decoration: underline;
