--- a/src/theme/base.scss
+++ b/src/theme/base.scss
@@ -2,7 +2,11 @@
 
 html {
   font-size: $font-size-base;
+  font-weight: $font-weight-base;
   height: 100%;
+  font-smooth: always;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -37,8 +41,8 @@ h6 {
   display: inline;
   margin: 0;
   padding: 0;
-  font-size: 1rem;
-  font-weight: normal;
+  font-size: inherit;
+  font-weight: inherit;
 }
 
 p {
