--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -37,11 +37,11 @@
   align-items: center;
   height: $header-height;
   padding: 0 30px;
-  transition: height .3s;
+  transition: height 0.3s;
 }
 
 .brand {
-  transition: transform .3s;
+  transition: transform 0.3s;
   transform-origin: left center;
   position: relative;
 }
@@ -50,7 +50,7 @@
   position: relative;
   display: inline-block;
   margin-right: 20px;
-  transition: transform .5s;
+  transition: transform 0.5s;
 
   &,
   & > img {
