--- a/src/shared/theme/variables.scss
+++ b/src/shared/theme/variables.scss
@@ -7,7 +7,7 @@ $text-color: #333;
 
 $font-size-base: 16px;
 $font-weight-base: 300;
-$font-family-sans-serif: "Lato", sans-serif;
+$font-family-sans-serif: "Source Sans Pro", sans-serif;
 
 // App variables
 
