--- a/src/shared/theme/base.scss
+++ b/src/shared/theme/base.scss
@@ -1,4 +1,4 @@
-@import "./variables";
+@import './variables';
 
 html {
   font-size: $font-size-base;
@@ -14,6 +14,12 @@ body {
   padding-bottom: $footer-height + 55;
   min-height: 100%;
   position: relative;
+}
+
+@media (color-index: 48) {
+  body {
+    background: black !important;
+  }
 }
 
 a {
